fixed buttons alignment

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
 .nav-bar {
   background-color: antiquewhite;
   padding: 0;
+  margin-bottom: 20px;
 }
 
 h1 {
@@ -36,19 +37,19 @@ p {
 }
 
 .buttons {
-  width: 100%;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
 }
 
 .btn {
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24);  background-color: #c8553d;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24);  
+  background-color: #c8553d;
   text-align: center;
   display:inline-block;
   text-decoration: none !important;
   margin:0 auto;
-  width: 50%;
-  /*float: left;*/
-  display:flex;
+  display: inline-block;
   flex-direction: column;
   align-items: center;
 }
